# dantzigpy

./: .gitignore  Cargo.toml  README.md  opencode.json  pyproject.toml  ty.toml
.opencode/agents/: agents.md
.opencode/skills/documentation/: SKILL.md
.opencode/skills/python/: SKILL.md
.opencode/skills/rust/: SKILL.md
crates/dantzigrs/: Cargo.toml
crates/dantzigrs/src/: lib.rs
dantzig_core/: Cargo.toml  pyproject.toml
dantzig_core/python/dantzig_core/: __init__.py
dantzig_core/src/: lib.rs
dantzig_core/src/simplex/: mod.rs
dantzigpy/: __init__.py
py-dantzigpy/: Cargo.toml  pyproject.toml
py-dantzigpy/python/dantzigpy/: __init__.py
py-dantzigpy/src/: lib.rs
