[package]
name = "dantzig_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bindings for dantzigpy — built with maturin and PyO3"

[lib]
name = "_dantzig_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
