[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dantzigpy"
requires-python = ">=3.13"
description = "Linear programming in Python, powered by a Rust backend"
license = { text = "MIT" }
version = "0.1.0"

[project.optional-dependencies]
dev = ["ty>=0.0.23"]

[tool.maturin]
python-source = "python"
module-name = "dantzigpy._dantzigpy"

[tool.ty.environment]
python-version = "3.13"
# The Python package source lives under python/
root = ["python"]

[tool.ty.analysis]
# dantzigpy._dantzigpy is the compiled Rust extension; it only exists after
# `maturin develop` is run. Suppress the unresolved-import diagnostic for it.
allowed-unresolved-imports = ["dantzigpy._dantzigpy"]
